# Workforce-Scheduling-AI

./: .gitignore  README.md  Yapilacaklar.txt  pyproject.toml  requirements.txt  simulasyon_raporu.txt
articles_subjects/: Pilot Uygulama İçin Gerekli Veriler.xlsx  Standart Kod Çalışması.xlsx
isgucuprojesi/: manage.py
isgucuprojesi/cizelgeleme/: apps.py  consumers.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
isgucuprojesi/cizelgeleme/algorithms/: geneticalgorithm.py  monte_carlo_simulasyon.py  taguchi.py
isgucuprojesi/cizelgeleme/migrations/: 0001_initial.py  0002_montecarlosonuc_montecarlotasarimsonuc.py  0003_gecmisperformansverisi.py  0004_gecmissureverisi.py  0005_is_isatama.py  0006_alter_is_durum_alter_is_oncelik.py  0007_remove_performansdegerlendirme_is_birligi_and_more.py  0009_alter_is_oncelik.py  (+2 more)
isgucuprojesi/isgucuprojesi/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
py_files/: app.py  geneticalgorithm.py  monte_carlo.py  monte_carlo_simulasyon.py  raporlama.py  taguchi.py
static/fonts/: DejaVuSansCondensed-Bold.pkl  DejaVuSansCondensed.pkl
static/js/: calisanlar.js  is_cizelgesi.js  tasarim_kodlari.js
static/raporlar/: performans_raporu_20250307.xlsx
templates/: base.html  calisanlar.html  index.html  is_cizelgesi.html  tasarim_kodlari.html
veri/: atama_detaylari.json  calisan_yetkinlikleri.json  gecmis_proje_performans_verileri.json  gecmis_veriler.json  genetik_sonuclari.json  is_listesi.json  monte_carlo_sonuclari.json  performans_degerlendirmeleri.json  taguchi_sonuclari.json  tasarim_kodlari.json
(+10 files in other folders)
